fix: Dropdown list 내부가 v-show일 경우 리스트는 없으나 padding이 보이는 오류 해결

--- a/stories/components/dataEntry/Dropdown.stories.mdx
+++ b/stories/components/dataEntry/Dropdown.stories.mdx
@@ -108,7 +108,7 @@ export const Default = (args, { argTypes }) => ({
                                 />
                             </template>
                             <template v-slot:list v-if="showSearchDropdown">
-                                <Label type="dataDisplay" style="margin: 4px 0">
+                                <Label type="dataDisplay" style="padding: 4px 0">
                                     인기검색어
                                 </Label>
                                 <List spacing>
