--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -183,7 +183,6 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconWritingSmallLine" />
                             <IconWrapper component="Icon" name="IconVodSmallLine" />
                             <IconWrapper component="Icon" name="IconDateSmallLine" />
-							<IconWrapper component="Icon" name="IconSearchSmallLine" />
                         </div>
                     </div>
                     <!--medium-->
@@ -263,6 +262,8 @@ export const Default = (args, { argTypes }) => ({
                           <IconWrapper component="Icon" name="IconStarLargeFill" />
                           <IconWrapper component="Icon" name="IconThreeDotLargeFill" />
                           <IconWrapper component="Icon" name="IconVodProductLargeLine" />
+                          <IconWrapper component="Icon" name="IconClassLargeLine" />
+                          <IconWrapper component="Icon" name="IconBusinessCaseLargeLine" />
                       </div>
                     </div>
                     <!--x-large-->
