fix: 스토리 props 값 넘기기

--- a/stories/components/navigation/SearchTopBar.stories.mdx
+++ b/stories/components/navigation/SearchTopBar.stories.mdx
@@ -41,7 +41,7 @@ export const Default = (args, { argTypes }) => ({
     <div style='width: 100%; display: flex; justify-content: center'>
     <div style='width: 375px'>
       <SearchTopBar :is-transparent='isTransparent' :keyword='keyword' :placeholder='placeholder'
-              :show-dropdown='showDropdown' style="position: relative"  />
+              :show-dropdown='showDropdown' :is-close="isClose" style="position: relative"  />
     </div>
     </div>
   `
