--- a/stories/elements/core/Logo.stories.mdx
+++ b/stories/elements/core/Logo.stories.mdx
@@ -1,5 +1,5 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Logo from '@/components/elements/core/logo/Logo';
+import Logo, {LogoElements} from '@/components/elements/core/logo/Logo';
 import { colors } from '@/utils/constants/color';
 
 <Meta
@@ -41,6 +41,19 @@ import { colors } from '@/utils/constants/color';
         options: colors,
       },
     },
+    element: {
+      description: "로고 태그",
+      defaultValue: "div",
+      table: {
+        type: {
+          summary: "string",
+        }
+      },
+      control: {
+        type: "select",
+        options: LogoElements,
+      },
+    }
   }}
 />
 
