feat: submenu에 새로운 메뉴가 추가될 시, 표시 될 수 있도록 하는 newMenuIndex 추가

--- a/stories/components/navigation/SubHeader.stories.mdx
+++ b/stories/components/navigation/SubHeader.stories.mdx
@@ -83,6 +83,14 @@ import SubHeader from '@/components/components/navigation/SubHeader';
         }
       }
     },
+    newMenuIndex: {
+      description: "새로운 메뉴 표시",
+      table: {
+        summary: {
+          type: "Number",
+        }
+      }
+    },
   }}
 />
 
@@ -101,6 +109,7 @@ export const Default = (args, {argTypes}) => ({
            :is-nuxt="isNuxt"
            :items="items"
            :style="{'--triggered-top': '0 !important'}"
+           :new-menu-index=newMenuIndex
 />
 </div>
     </div>`,
