fix: 피드백 반영

--- a/stories/components/navigation/SubHeader.stories.mdx
+++ b/stories/components/navigation/SubHeader.stories.mdx
@@ -44,6 +44,7 @@ import SubHeader from '@/components/components/navigation/SubHeader';
           url: "#",
           name: "진로부트캠프",
           active: false,
+          notice:true,
         },
         {
           url: "#",
@@ -83,14 +84,6 @@ import SubHeader from '@/components/components/navigation/SubHeader';
         }
       }
     },
-    newMenuIndex: {
-      description: "새로운 메뉴 표시",
-      table: {
-        summary: {
-          type: "Number",
-        }
-      }
-    },
   }}
 />
 
@@ -109,7 +102,6 @@ export const Default = (args, {argTypes}) => ({
            :is-nuxt="isNuxt"
            :items="items"
            :style="{'--triggered-top': '0 !important'}"
-           :new-menu-index=newMenuIndex
 />
 </div>
     </div>`,
