feat: submenu에 새로운 메뉴가 추가될 시, 표시 될 수 있도록 하는 newMenuIndex 추가 (#1075)
* feat: submenu에 새로운 메뉴가 추가될 시, 표시 될 수 있도록 하는 newMenuIndex 추가

* fix: 피드백 반영

--- a/stories/components/navigation/SubHeader.stories.mdx
+++ b/stories/components/navigation/SubHeader.stories.mdx
@@ -44,6 +44,7 @@ import SubHeader from '@/components/components/navigation/SubHeader';
           url: "#",
           name: "진로부트캠프",
           active: false,
+          notice:true,
         },
         {
           url: "#",
