feat: IconBuildingLargeLine 추가

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -267,6 +267,7 @@ export const Default = (args, { argTypes }) => ({
                           <IconWrapper component="Icon" name="IconVodProductLargeLine" />
                           <IconWrapper component="Icon" name="IconClassLargeLine" />
                           <IconWrapper component="Icon" name="IconBusinessCaseLargeLine" />
+                          <IconWrapper component="Icon" name="IconBuildingLargeLine" />
                       </div>
                     </div>
                     <!--x-large-->
