--- a/stories/components/navigation/SubHeader.stories.mdx
+++ b/stories/components/navigation/SubHeader.stories.mdx
@@ -26,30 +26,32 @@ import SubHeader from '@/components/components/navigation/SubHeader';
       description: "서브헤더 목록",
       defaultValue: [
         {
-          url: "#",
+          path: "#",
           name: "홈",
           active: false,
         },
         {
-          url: "#",
+          path: "#",
           name: "직무부트캠프",
           active: true,
         },
         {
-          url: "#",
+          path: "#",
           name: "실무PT",
           active: false,
         },
         {
-          url: "#",
+          path: "#",
           name: "진로부트캠프",
           active: false,
           notice:true,
         },
         {
-          url: "#",
+          path: "#",
           name: "VOD",
           active: false,
+          target: "_blank",
+          anchor: true,
         },
       ],
       control: {type: "array"},
@@ -66,15 +68,6 @@ import SubHeader from '@/components/components/navigation/SubHeader';
           type: "Boolean",
         }
       }
-    },
-    isNuxt: {
-      description: "이동하는 페이지가 Nuxt인지 여부",
-      table: {
-        summary: {
-          type: "Boolean",
-          default: true,
-        }
-      },
     },
     isTransparent: {
       description: "투명 헤더 사용 여부",
