feat: icon exclamation 4x-large size 추가

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -338,6 +338,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconCheckRound4XLargeFill" />
                             <IconWrapper component="Icon" name="IconStar4XLargeFill" />
                             <IconWrapper component="Icon" name="IconStar4XLargeLine" />
+							<IconWrapper component="Icon" name="IconExclamation4XLargeFill" />
                         </div>
                     </div>
                     <!--etc-->
