--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -268,6 +268,7 @@ export const Default = (args, { argTypes }) => ({
                           <IconWrapper component="Icon" name="IconClassLargeLine" />
                           <IconWrapper component="Icon" name="IconBusinessCaseLargeLine" />
                           <IconWrapper component="Icon" name="IconBuildingLargeLine" />
+                          <IconWrapper component="Icon" name="IconTaskLargeLine" />
                       </div>
                     </div>
                     <!--x-large-->
