feat: add icon-share-small-line

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -130,6 +130,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconFilterSmallLine" />
                             <IconWrapper component="Icon" name="IconBookmarkSmallLine" />
                             <IconWrapper component="Icon" name="IconBookmarkSmallFill" />
+                            <IconWrapper component="Icon" name="IconShareSmallLine" />
                         </div>
                         <div style="display: flex; flex-wrap: wrap;">
                             <IconWrapper component="Icon" name="IconCheckSmallLine" />
