--- a/stories/components/general/button/Button.stories.mdx
+++ b/stories/components/general/button/Button.stories.mdx
@@ -1,7 +1,7 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Button, { buttonSizes, buttonColors, buttonTypes, ghostTypeButtonColors } from '@/components/components/general/button/Button';
-import Typography from '@/components/elements/core/typography/Typography';
-import Icon from '@/components/elements/core/icon/Icon';
+import Button, { buttonSizes, buttonColors, buttonTypes, ghostTypeButtonColors } from '@/components/components/general/button/Button.vue';
+import Typography from '@/components/elements/core/typography/Typography.vue';
+import Icon from '@/components/elements/core/icon/Icon.vue';
 
 <Meta
   title="General/Button/Button"
