--- a/stories/components/message/modal/BasicModal.stories.mdx
+++ b/stories/components/message/modal/BasicModal.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import BasicModal, { aligns } from '@/components/components/message/modal/BasicModal';
-import Button, { buttonColors } from '@/components/components/general/button/Button';
+import BasicModal, { aligns } from '@/components/components/message/modal/BasicModal.vue';
+import Button, { buttonColors } from '@/components/components/general/button/Button.vue';
 
 <Meta
     title="Message/Modal/BasicModal"
